--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-time-picker": "^6.6.0",
+    "resolve": "^1.22.8",
     "rsuite": "^5.57.0",
     "web-vitals": "^2.1.4"
   },
